gegistro biblia nitido

--- a/RegistroBiblia/App.config
+++ b/RegistroBiblia/App.config
@@ -6,7 +6,7 @@
   </configSections>
 
   <connectionStrings>
-    <add name="ConStr" connectionString="Data Source=ALBERT\SQLEXPRESS; Initial Catalog=LibrosDB;
+    <add name="ConStr" connectionString="Data Source=.\SqlExpress; Initial Catalog=LibrosDB;
        Integrated Security=True"
          providerName="System.Data.SqlClient"/>
   </connectionStrings>
